--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <main class="main-content">
      <section class="details-container">
       <img class="details-image"src="images/dog1.jpg" alt="">
-      <span class="ditails-title">JUST FUCK IT</span>
+      <span class="ditails-title">AMA HASLA</span>
      </section>
      <ul class="thumbnails-list">
 
