--- a/index.html
+++ b/index.html
@@ -11,80 +11,82 @@
 </head>
 <body>
  <header>
-     <h2 class="logo-title">dogram</h2>
- </header>   
+     <h2 class="logo-title">D O G R A M</h2>
+     <hr>
+ </header> 
  <main class="main-content">
      <section class="details-container">
       <img class="details-image"src="images/dog1.jpg" alt="">
-      <span class="ditails-title">AMA HASLA</span>
+      <span class="details-title">AMA HASLA</span>
      </section>
      <ul class="thumbnails-list">
 
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog1.jpg">
+            <a class="thumbnails-anchor" href="images/dog1.jpg" 
+             data-details-title = "This is dog 1">
                 <img class="thumbnails-image"src="images/dog1.jpg" alt="dog1 image">
                 <span class="thumbnails-title">dog1</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog2.jpg">
+            <a class="thumbnails-anchor" href="images/dog2.jpg"data-details-title="This is dog 2">
                 <img class="thumbnails-image"src="images/dog2.jpg" alt="dog2 image">
                 <span class="thumbnails-title">dog2</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog3.jpg">
+            <a class="thumbnails-anchor" href="images/dog3.jpg"data-details-title="this is dog 3">
                 <img class="thumbnails-image"src="images/dog3.jpg" alt="dog3.jpg image">
                 <span class="thumbnails-title">dog3.jpg</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog4.jpg">
+            <a class="thumbnails-anchor" href="images/dog4.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog4.jpg" alt="dog4.jpg image">
                 <span class="thumbnails-title">dog4.jpg</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog5.jpg">
+            <a class="thumbnails-anchor" href="images/dog5.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog5.jpg" alt="dog5.jpg image">
                 <span class="thumbnails-title">dog5.jpg</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog1.jpg">
+            <a class="thumbnails-anchor" href="images/dog1.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog1.jpg" alt="dog1 image">
                 <span class="thumbnails-title">dog1</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog2.jpg">
+            <a class="thumbnails-anchor" href="images/dog2.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog2.jpg" alt="dog2 image">
                 <span class="thumbnails-title">dog2</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog3.jpg">
+            <a class="thumbnails-anchor" href="images/dog3.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog3.jpg" alt="dog3.jpg image">
                 <span class="thumbnails-title">dog3.jpg</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog4.jpg">
+            <a class="thumbnails-anchor" href="images/dog4.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog4.jpg" alt="dog4.jpg image">
                 <span class="thumbnails-title">dog4.jpg</span>
             </a>
 
         </li>
         <li class="thumbnails-item">
-            <a class="thumbnails-anchor" href="images/dog5.jpg">
+            <a class="thumbnails-anchor" href="images/dog5.jpg"data-details-title="HHH">
                 <img class="thumbnails-image"src="images/dog5.jpg" alt="dog5.jpg image">
                 <span class="thumbnails-title">dog5.jpg</span>
             </a>
@@ -97,5 +99,6 @@
      &copy; Copyright 2021
      <a href="https://www.tel-ran.com/">Tel-Ran</a>
  </footer>
+ <script src="src/index.js"></script>
 </body>
 </html>
